# wert

./: PRD.md  ROADMAP.md  SCHEMA.md  auth.config.ts  auth.ts  drizzle.config.ts  next.config.mjs  package.json  proxy.ts
.agent/rules/: prd.md
.docs/: ark.txt
app/: layout.tsx  page.tsx
app/login/: page.tsx
app/settings/: page.tsx
apps/finance/: .gitignore  Dockerfile  cache_manager.py  main.py  models.py  pyproject.toml  quickstart.sh  railway.json  readme.md
apps/finance/data_sources/: __init__.py  akshare_source.py  base.py  manager.py  rate_limiter.py  tushare_source.py
apps/wert/: drizzle.config.ts  eslint.config.mjs  next.config.mjs  package.json  proxy.ts  vercel.json
apps/wert-native/: app.json  package.json  tailwind.config.js
apps/wert-native/app/: _layout.tsx  index.tsx  onboarding.tsx
apps/wert-native/app/(tabs)/: _layout.tsx  index.tsx
apps/wert-native/src/components/: ErrorBoundary.tsx
apps/wert/drizzle/: 0000_tiny_quicksilver.sql  0001_redundant_ender_wiggin.sql  0002_user_settings.sql
apps/wert/output/: asset_account.csv  asset_price.csv
components/dashboard/: SnapCarousel.tsx  SnapPieChart.tsx  constants.ts  types.ts
components/settings/: AssetManagement.tsx
components/snap-flow/: SnapButton.tsx  SnapWizard.tsx
components/ui/: button.tsx  dialog.tsx
db/: index.ts  schema.ts
drizzle/: 0000_complex_sway.sql  0001_wild_trish_tilby.sql
drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
lib/actions/: assets.ts  snapshot.ts
lib/logic/: calculator.ts
lib/services/: currency.ts
(+142 files in other folders)
