[project]
name = "finance"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "gary-Shen", email = "grinson50@gmail.com" }]
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "akshare>=1.18.19",
    "pydantic>=2.12.5",
    "pandas>=3.0.0",
    "pypinyin>=0.55.0",
]

requires-python = ">=3.13.*"
readme = "README.md"
license = { text = "MIT" }

[tool.ruff]
# Ruff 的生产级配置
line-length = 88
select = ["E", "F", "I", "B"] # 开启错误、规范、导入排序和常见 Bug 检查

[tool.ruff.isort]
known-first-party = ["api"]

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = []
